<resources>
    <string name="app_name">PintIonary</string>
    <string name="beerdesc">BEER</string>
    <string name="clean_drawing">Clean it!</string>
    <string name="un_joli_titre">Connexion a une partie</string>
    <string name="adresse_mail">ID de la partie</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">CONNEXION</string>
    <string name="logo">logo</string>
</resources>
